fix nav menu bg on mobile

--- a/components/Menu/Menu.module.scss
+++ b/components/Menu/Menu.module.scss
@@ -15,6 +15,10 @@
         display: block;
         margin: 0;
 
+        @include themeComponent($themes) {
+            background-color: t('inactiveBg');
+        }
+
         @media(max-width: $tabletMax) {
             position: absolute;
             left: -100%;
